--- a/css/linkmain.css
+++ b/css/linkmain.css
@@ -26,15 +26,15 @@
     animation: logo-loader 0.62s; }
   .shorby-logo.animated:hover:before, .shorby-logo.animated:active:before {
     width: 100%; }
-/*
+
 @keyframes logo-loader {
   0% {
     width: 100%; }
   62% {
     width: 100%; }
   100% {
-    width: 0.6em; } }*/
-/*
+    width: 0.6em; } }
+
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -63,12 +63,20 @@
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }*/
+  --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
 
 *,
 *::before,
 *::after {
   box-sizing: border-box; }
+
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -ms-overflow-style: scrollbar;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
 @-ms-viewport {
   width: device-width; }
@@ -76,8 +84,18 @@
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block; }
 
+body {
+  margin: 0;
+  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #777;
+  text-align: left;
+  background-color: #FFF; }
 
-
+[tabindex="-1"]:focus {
+  outline: 0 !important; }
 
 hr {
   box-sizing: content-box;
@@ -92,14 +110,14 @@ p {
   margin-top: 0;
   margin-bottom: 1rem; }
 
-/*abbr[title],
+abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
   text-decoration: underline dotted;
   cursor: help;
   border-bottom: 0; }
-*/
-/*address {
+
+address {
   margin-bottom: 1rem;
   font-style: normal;
   line-height: inherit; }
@@ -124,9 +142,9 @@ dd {
   margin-left: 0; }
 
 blockquote {
-  margin: 0 0 1rem; }*/
+  margin: 0 0 1rem; }
 
-/*dfn {
+dfn {
   font-style: italic; }
 
 b,
@@ -134,8 +152,8 @@ strong {
   font-weight: bolder; }
 
 small {
-  font-size: 80%; }*/
-/*
+  font-size: 80%; }
+
 sub,
 sup {
   position: relative;
@@ -148,7 +166,7 @@ sub {
 
 sup {
   top: -.5em; }
-*/
+
 a {
   color: #007bff;
   text-decoration: none;
@@ -403,7 +421,35 @@ mark,
   .blockquote-footer::before {
     content: "\2014 \00A0"; }
 
-
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 2px solid transparent;
+  padding: 0.8rem 1.2rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 4px;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  display: block;
+  width: 100%; }
+  @media screen and (prefers-reduced-motion: reduce) {
+    .btn {
+      transition: none; } }
+  .btn:hover, .btn:focus {
+    text-decoration: none; }
+  .btn:focus, .btn.focus {
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25); }
+  .btn.disabled, .btn:disabled {
+    opacity: 0.65; }
+  .btn:not(:disabled):not(.disabled) {
+    cursor: pointer; }
+  .btn:not(:disabled):not(.disabled):active, .btn:not(:disabled):not(.disabled).active {
+    background-image: none; }
 
 a.btn.disabled,
 fieldset:disabled a.btn {
@@ -461,9 +507,83 @@ fieldset:disabled a.btn {
   .btn-block + .btn-block {
     margin-top: 0.5rem; }
 
+.container {
+  width: 100%;
+  padding-right: 0.62em;
+  padding-left: 0.62em;
+  margin-right: auto;
+  margin-left: auto; }
+  @media (min-width: 576px) {
+    .container {
+      max-width: 540px; } }
+  @media (min-width: 768px) {
+    .container {
+      max-width: 720px; } }
 
+.links {
+  clear: both;
+  padding: 0;
+  margin: -0.31em;
+  margin-bottom: 0.62em; }
+  .links .link {
+    list-style-type: none;
+    margin-bottom: 0.62em;
+    padding: 0 0.31em; }
+    .links .link.highlight {
+      animation: 5s tada 0.5s infinite linear; }
+      .links .link.highlight:focus, .links .link.highlight:active, .links .link.highlight:hover {
+        animation: none; }
+    .links .link .btn {
+      font-weight: 700; }
 
+.buttons {
+  margin-bottom: 1em; }
+  .buttons .btn {
+    white-space: normal; }
 
+.btn {
+  overflow: hidden;
+  vertical-align: middle; }
+  .btn .fa-network {
+    display: inline-block;
+    font-size: 2em;
+    margin-top: -0.25em;
+    margin-bottom: -0.25em; }
+  .btn .fa-network + span {
+    margin-left: 0.6em; }
+
+.messengers {
+  clear: both; }
+  .messengers.links-num-3 .link, .messengers.links-num-4 .link, .messengers.links-num-5 .link, .messengers.links-num-6 .link, .messengers.links-num-7 .link, .messengers.links-num-8 .link, .messengers.links-num-9 .link, .messengers.links-num-10 .link, .messengers.links-num-11 .link, .messengers.links-num-12 .link {
+    max-width: 33.33333%; }
+  .messengers .btn .fa-network + span {
+    display: none; }
+  .messengers.links-num-1 .link:nth-of-type(1), .messengers.links-num-4 .link:nth-of-type(1), .messengers.links-num-7 .link:nth-of-type(1), .messengers.links-num-10 .link:nth-of-type(1), .messengers.links-num-1 .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-2 .messengers.links-num-1 .link:nth-of-type(2), .messengers.links-num-4 .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-2 .messengers.links-num-4 .link:nth-of-type(2), .messengers.links-num-7 .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-2 .messengers.links-num-7 .link:nth-of-type(2), .messengers.links-num-10 .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-2 .messengers.links-num-10 .link:nth-of-type(2), .messengers.links-num-1 .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-5 .messengers.links-num-1 .link:nth-of-type(2), .messengers.links-num-4 .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-5 .messengers.links-num-4 .link:nth-of-type(2), .messengers.links-num-7 .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-5 .messengers.links-num-7 .link:nth-of-type(2), .messengers.links-num-10 .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-5 .messengers.links-num-10 .link:nth-of-type(2), .messengers.links-num-1 .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-8 .messengers.links-num-1 .link:nth-of-type(2), .messengers.links-num-4 .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-8 .messengers.links-num-4 .link:nth-of-type(2), .messengers.links-num-7 .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-8 .messengers.links-num-7 .link:nth-of-type(2), .messengers.links-num-10 .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-8 .messengers.links-num-10 .link:nth-of-type(2), .messengers.links-num-1 .messengers.links-num-11 .link:nth-of-type(2), .messengers.links-num-11 .messengers.links-num-1 .link:nth-of-type(2), .messengers.links-num-4 .messengers.links-num-11 .link:nth-of-type(2), .messengers.links-num-11 .messengers.links-num-4 .link:nth-of-type(2), .messengers.links-num-7 .messengers.links-num-11 .link:nth-of-type(2), .messengers.links-num-11 .messengers.links-num-7 .link:nth-of-type(2), .messengers.links-num-10 .messengers.links-num-11 .link:nth-of-type(2), .messengers.links-num-11 .messengers.links-num-10 .link:nth-of-type(2) {
+    max-width: 100%; }
+    .messengers.links-num-1 .link:nth-of-type(1) .btn .fa-network + span, .messengers.links-num-4 .link:nth-of-type(1) .btn .fa-network + span, .messengers.links-num-7 .link:nth-of-type(1) .btn .fa-network + span, .messengers.links-num-10 .link:nth-of-type(1) .btn .fa-network + span, .messengers.links-num-1 .messengers.links-num-2 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-2 .messengers.links-num-1 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-4 .messengers.links-num-2 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-2 .messengers.links-num-4 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-7 .messengers.links-num-2 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-2 .messengers.links-num-7 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-10 .messengers.links-num-2 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-2 .messengers.links-num-10 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-1 .messengers.links-num-5 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-5 .messengers.links-num-1 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-4 .messengers.links-num-5 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-5 .messengers.links-num-4 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-7 .messengers.links-num-5 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-5 .messengers.links-num-7 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-10 .messengers.links-num-5 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-5 .messengers.links-num-10 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-1 .messengers.links-num-8 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-8 .messengers.links-num-1 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-4 .messengers.links-num-8 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-8 .messengers.links-num-4 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-7 .messengers.links-num-8 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-8 .messengers.links-num-7 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-10 .messengers.links-num-8 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-8 .messengers.links-num-10 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-1 .messengers.links-num-11 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-11 .messengers.links-num-1 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-4 .messengers.links-num-11 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-11 .messengers.links-num-4 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-7 .messengers.links-num-11 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-11 .messengers.links-num-7 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-10 .messengers.links-num-11 .link:nth-of-type(2) .btn .fa-network + span, .messengers.links-num-11 .messengers.links-num-10 .link:nth-of-type(2) .btn .fa-network + span {
+      display: inline-block; }
+  .messengers.links-num-2 .link:nth-of-type(1), .messengers.links-num-5 .link:nth-of-type(1), .messengers.links-num-8 .link:nth-of-type(1), .messengers.links-num-11 .link:nth-of-type(1), .messengers.links-num-2 .link:nth-of-type(2), .messengers.links-num-5 .link:nth-of-type(2), .messengers.links-num-8 .link:nth-of-type(2), .messengers.links-num-11 .link:nth-of-type(2) {
+    max-width: 50%; }
+  .messengers .link {
+    display: inline-block;
+    width: 100%; }
+
+.social_links {
+  text-align: center;
+  margin: 1em auto;
+  margin-bottom: -1.3em; }
+  .social_links .link {
+    display: inline-block;
+    font-size: 2em;
+    padding: 0.3em 0.8em;
+    margin: 0;
+    width: 33.333%;
+    text-align: center; }
+    .social_links .link a {
+      color: inherit; }
+    .social_links .link .fa-network {
+      width: 1em;
+      height: 1em; }
 
 @keyframes tada {
   from {
@@ -496,7 +616,7 @@ header {
   header .avatar + h1 {
     font-size: 1em; }
 
-
+/*
   {
     bodyColor:
     backgroundColor:
@@ -510,7 +630,7 @@ header {
   }
   
   
-
+*/
 .default-theme {
   color: #333;
   background-color: #FFF; }
@@ -3292,8 +3412,15 @@ header {
       .show > .valintine9-theme.outlined-buttons .btn.dropdown-toggle:focus {
         box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5); }
 
+.rounded-buttons .btn {
+  border-radius: 50px !important; }
 
+html {
+  min-height: 100%; }
 
+body {
+  background-repeat: no-repeat;
+  min-height: 100%; }
 
 .gifbg {
   position: absolute;
@@ -3303,10 +3430,10 @@ header {
   left: 0;
   overflow: hidden; }
   .gifbg canvas, .gifbg video {
-    /* Make video to at least 100% wide and tall 
+    /* Make video to at least 100% wide and tall */
     min-width: 100%;
     min-height: 100%;
-    /* Setting width & height to auto prevents the browser from stretching or squishing the video 
+    /* Setting width & height to auto prevents the browser from stretching or squishing the video */
     width: auto;
     height: auto;
     /* Center the video */
@@ -3315,10 +3442,23 @@ header {
     left: 50%;
     transform: translate(-50%, -50%); }
 
-/*.biolink-page {
+.biolink-page {
   padding-top: 2em;
   padding-bottom: 2em;
   position: relative;
   z-index: 10; }
-*/
-*/*/
+
+.powered-by-shorby {
+  text-align: center;
+  font-size: .8em;
+  margin-bottom: 2em;
+  position: relative;
+  z-index: 10; }
+  .powered-by-shorby a {
+    color: inherit;
+    text-decoration: none; }
+    .powered-by-shorby a:hover, .powered-by-shorby a:active, .powered-by-shorby afocus {
+      color: inherit;
+      text-decoration: none; }
+  .powered-by-shorby .shorby-logo {
+    font-size: 1.2em; }
