--- a/css/template.css
+++ b/css/template.css
@@ -233,7 +233,8 @@
       max-width: 540px; } }
   @media (min-width: 768px) {
     .container {
-      max-width: 720px; } }
+      max-width: 720px; } 
+  }
 
  a 
   {
