--- a/css/dash.css
+++ b/css/dash.css
@@ -535,6 +535,11 @@ hr.own {
   margin-bottom: 15px;
   clear: both; 
 }
+ 
+  .messengers.links-num-4 .link
+  {
+    max-width :24.33333%;
+  }
   .messengers.links-num-3 .link 
   {
     max-width: 32.33333%; 
@@ -545,12 +550,12 @@ hr.own {
      }
   .messengers.links-num-1 .link
   {
-    max-width: 100%; 
+    max-width: 99%; 
   }
-    .messengers.links-num-1 .link:nth-of-type(1) .btn .fa-network + span
-    {
-      display: inline-block;
-       }
+  .messengers.links-num-1 .link:nth-of-type(1) .btn .fa-network + span
+  {
+    display: inline-block;
+   }
   .messengers.links-num-2 .link 
   {
     max-width: 49%; 
