--- a/css/style-thankyou.css
+++ b/css/style-thankyou.css
@@ -3,8 +3,9 @@ body,
 html {
   width: 100%;
   height: 100%;
+  background-image: none;
 }
-  
+
 
 /*SETUP*/
 body,
@@ -16,6 +17,14 @@ h5,
 h6 {
   font-family: SourceSansPro-Regular, sans-serif;
   font-weight: 700;
+}
+
+hr.orn {
+    border-top: 3px solid #106BC8;
+    width: 10%;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /*PAGE TITLE*/
@@ -48,7 +57,7 @@ h6 {
   max-width: 600px;
   display: block;
   margin: 0 auto;
-color:#505050 ;
+  color: #505050;
   font-size: 22px;
   font-weight: 400;
   line-height: 1.3;
@@ -57,7 +66,7 @@ color:#505050 ;
 
 /*KONTEN*/
 .konten {
-  margin-top: 10px;
+  margin-top: 50px;
   margin-bottom: 50px;
 }
 
@@ -70,6 +79,11 @@ color:#505050 ;
   border: 1px solid rgba(0,0,0,.125);
 }
 
+.card-payment {
+  background-color: #fcf9f2;
+  border-color: #fcf1d1;
+}
+
 .card-title {
   font-size: 24px;
   font-weight: 600;
@@ -80,8 +94,18 @@ color:#505050 ;
   font-weight: 400;
 }
 
+.btn-confirm-thankyou {
+  font-size: 19px;
+  padding: 10px 30px;    
+}
+
 /*MEDIA QUERIES*/
 @media (max-width: 575.98px) {
+  .page-title {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  
   .page-title h1 {
     font-size: 30px;
   }
@@ -89,10 +113,17 @@ color:#505050 ;
   .pg-title {
     padding-top: 10px;
     font-size: 16px;
+    max-width: 310px;
   }
 
   hr.orn {
     width: 33%;
+  }
+}
+
+@media (max-width: 769px) {
+  .btn-confirm-thankyou {
+    font-size: 16px;
   }
 }
 
