--- a/css/landing.css
+++ b/css/landing.css
@@ -31,9 +31,13 @@ h6 {
   font-weight: 600;
 }
 
-html,body,main,#app {
-  /*height: 100vh;
-  min-height: 100vh;*/
+html,body,#app {
+  height: 100%;
+  position: relative;
+}
+
+main {
+  min-height: 100%;
 }
 
 body {
