--- a/css/dash.css
+++ b/css/dash.css
@@ -114,18 +114,18 @@
 .view-wa:hover {
   color: #3490dc;
 }
-.noshow
-{   
-  padding: 50px 0 50px 0;
+
+.noshow {   
+  padding: 100px 0 100px 0;
   margin: 35px 0 35px 0; 
   background-color: #F6F6F6;
 }
-.textdash
-{
-  padding:100px 0 100px 0; 
-  margin:0 auto ;
-  text-align:center;
+
+.textdash {
+  font-size: 35px;
+  font-weight: 600;  
 }
+
 .form-controll {
   display: inline;
   width: auto;
@@ -208,7 +208,7 @@
 /* Dashboard */
 .btncreate{
   cursor: pointer;
-  padding: 12px 30px;
+  padding: 12px 10px;
   font-size: 15px;
   font-weight: 700;
   border-radius: 50px;
@@ -253,6 +253,10 @@
 
   .btnsingle {
     margin-left: 0px;
+  }
+
+  .textdash{
+    font-size: 25px;
   }
 }
 
