--- a/css/dash.css
+++ b/css/dash.css
@@ -102,7 +102,7 @@
 }
 .carddash
 {
-  margin: 35px 0 35px 0; 
+  margin: 0px 0 35px 0; 
   background-color: #F6F6F6;
 }
 .view-wa {
@@ -214,6 +214,11 @@
   border-radius: 50px;
   border:none;
   box-shadow: 0 1px 2px 0 rgba(75, 75, 75, 0.50);
+}
+
+.btncreate.btn-console {
+  padding: 12px 30px;
+  border-radius: 50px;
 }
 
 .btncreate:hover{
