--- a/css/landing.css
+++ b/css/landing.css
@@ -264,9 +264,9 @@ p,span {
 
 /*FOOTER*/
 .secfoot {
-  padding-top: 100px;
-  padding-bottom: 100px;
-  background-color: #106AC7;
+  padding-top: 75px;
+  padding-bottom: 75px;
+  background-color: #1D82F6;
 }
 
 .secfoot h2 {
